--- a/assets/css/landingPageGreenPhone.css
+++ b/assets/css/landingPageGreenPhone.css
@@ -15,9 +15,6 @@
     /* background-color: magenta; */
     margin: 0px; 
 }
-#grid-c {
-    overflow: hidden;
-}
 .phone-c {
     height: 400px;
     width: 400px;
