--- a/assets/css/landingPageMediaScreens.css
+++ b/assets/css/landingPageMediaScreens.css
@@ -1,4 +1,30 @@
-@media screen and (min-width: 1024px) {
+/* @media screen and (max-width: 2000) {
+    .green-phone,
+    .phone-video {
+          left: 100px;
+          
+          width: 600px;
+          height: 600px;
+     
+     }
+} */
+@media screen and (min-width: 1279) {
+    .green-phone,
+    .phone-video {
+ 
+        height: 200% !important;
+        width: 200% !important;
+     
+     }
+     .black__circles {
+         visibility: hidden;
+     }
+}
+
+
+
+
+@media screen and (min-width: 1025px) {
     .nav__products-c *,
     .nav__learn-c *,
     .nav__support-c *,
@@ -28,6 +54,9 @@
     }
     .hide {
         position: absolute;
+    }
+    .black__circles {
+        visibility: hidden;
     }
     
 }
@@ -75,7 +104,9 @@
     }
     .green-phone,
     .phone-video {
-        left: 250px;
+        left: -250px;
+        width: 130%;
+        /* width: 60%; */
     }
     .nav__sign-nup-b-c {
         margin-top: -120px;
@@ -85,12 +116,12 @@
         top: -80px;
         
     }
-    .green-phone {
+    /* .green-phone {
         width: 60%;
     }
     .phone-video {
         width: 60%;
-    }
+    } */
     .intro__c__args-c {
         flex-direction: column;
     }
@@ -257,7 +288,7 @@
   
     .green-phone,
     .phone-video {
-        /* left: 100px; */
+        left: 100px;
         /* top: 30px; */
         width: 100%;
      
